# ghost-in-the-curses

./: CMakeLists.txt  README.md
data/: computer.txt
src/: discourse.cpp  discourse.h  main.cpp  screen.cpp  screen.h  speechsynth.h
